zz-out/pass14_run2/zz-scripts/chapter01/plot_fig03_relative_error_timeline.err
  File "/home/jplal/MCGT/zz-scripts/chapter01/plot_fig03_relative_error_timeline.py", line 60
    parser.add_argument(
                       ^
SyntaxError: '(' was never closed
